fix line break in footer text

--- a/styles/sass/abstracts/_mixins.scss
+++ b/styles/sass/abstracts/_mixins.scss
@@ -3,3 +3,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin horizontal-line-sm {
+  width: 20rem;
+  border-bottom: 3px solid rgba(255, 255, 255, 0.4);
+  margin-top: 0.5rem;
+}
